Pruebas terminadas y comprobadas. Cambios puntuales en el codigo